<resources>
    <string name="app_name">Parstagram</string>
    <string name="login_button">Log in</string>
    <string name="submit_description">Write a caption..</string>
    <string name="submit_take_pic">Take Picture</string>
    <string name="submit_btn">Share</string>
    <string name="signup_question">Don\'t have an account?</string>
    <string name="signup_text">Sign up.</string>
    <string name="signup_title">Username and Password</string>
    <string name="signup_button_text">Sign up</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>