<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/instagram_logo_background"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:id="@+id/reLoginContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        tools:context=".LoginActivity">

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etPassword"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/rounded_button"
            android:text="@string/login_button"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etUsername"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/rounded_button_et"
            android:hint="password"
            android:inputType="textPassword"
            android:padding="15dp" />

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ivLogo"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/rounded_button_et"
            android:hint="username"
            android:inputType="text"
            android:padding="15dp" />

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_alignParentBottom="false"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="80dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="80dp"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/instagram_logo_foreground" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/reSignupContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reLoginContainer"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="5dp"
        android:gravity="bottom"
        tools:context=".LoginActivity">

        <RelativeLayout
            android:id="@+id/reSignupBox"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="5dp"
            android:background="@drawable/top_border"
            android:gravity="center|center_vertical"
            tools:context=".LoginActivity">

            <TextView
                android:id="@+id/tvSignQuestion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup_question" />

            <TextView
                android:id="@+id/tvSignup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@+id/tvSignQuestion"
                android:text="@string/signup_text"
                android:textColor="@color/instagram_signup_color"
                android:textStyle="bold" />
        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>